angles_coordinates
